# BE/swagger.json
@@ -1,24 +1,15 @@
 {
-    "swagger": "2.0",
+    "openapi": "3.0.0",
     "info": {
         "version": "1.0.0",
         "title": "REST API",
         "description": ""
     },
-    "host": "localhost:3000",
-    "basePath": "/",
-    "schemes": ["http"],
-    "securityDefinitions": {
-        "apiKey": {
-            "type": "apiKey",
-            "name": "x-api-key",
-            "in": "header",
-            "description": "Some description..."
+    "servers": [
+        {
+            "url": "http://localhost:3000/"
         }
-    },
-    "security": {
-        "apiKey": [{}]
-    },
+    ],
     "paths": {
         "/account": {
             "get": {
@@ -27,12 +18,29 @@
                     {
                         "name": "authorization",
                         "in": "header",
-                        "type": "string"
+                        "schema": {
+                            "type": "string"
+                        }
                     }
                 ],
                 "responses": {
                     "200": {
                         "description": "OK"
+                    }
+                },
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/sample"
+                            }
+                        },
+                        "application/xml": {
+                            "schema": {
+                                "$ref": "#/components/schemas/sample"
+                            }
+                        }
                     }
                 }
             }
@@ -40,16 +48,7 @@
         "/account/login": {
             "post": {
                 "description": "",
-                "parameters": [
-                    {
-                        "name": "username",
-                        "type": "string"
-                    },
-                    {
-                        "name": "password",
-                        "type": "string"
-                    }
-                ],
+                "parameters": [],
                 "responses": {}
             }
         },
@@ -63,7 +62,22 @@
         "/account/": {
             "post": {
                 "description": "",
-                "parameters": [],
+                "parameters": [
+                    {
+                        "name": "x-api-key",
+                        "in": "header",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "authorization",
+                        "in": "header",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
                 "responses": {}
             }
         },
@@ -75,12 +89,16 @@
                         "name": "id",
                         "in": "path",
                         "required": true,
-                        "type": "string"
+                        "schema": {
+                            "type": "string"
+                        }
                     },
                     {
-                        "name": "authorization",
+                        "name": "x-api-key",
                         "in": "header",
-                        "type": "string"
+                        "schema": {
+                            "type": "string"
+                        }
                     }
                 ],
                 "responses": {}
@@ -94,7 +112,9 @@
                         "name": "email",
                         "in": "path",
                         "required": true,
-                        "type": "string"
+                        "schema": {
+                            "type": "string"
+                        }
                     }
                 ],
                 "responses": {}
@@ -108,7 +128,16 @@
                         "name": "email",
                         "in": "path",
                         "required": true,
-                        "type": "string"
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "authorization",
+                        "in": "header",
+                        "schema": {
+                            "type": "string"
+                        }
                     }
                 ],
                 "responses": {}
@@ -124,13 +153,8 @@
         "/product/search": {
             "get": {
                 "description": "",
-
-                "responses": {},
-                "security": [
-                    {
-                        "apiKey": [{}]
-                    }
-                ]
+                "parameters": [],
+                "responses": {}
             }
         },
         "/product": {
@@ -140,7 +164,9 @@
                     {
                         "name": "authorization",
                         "in": "header",
-                        "type": "string"
+                        "schema": {
+                            "type": "string"
+                        }
                     }
                 ],
                 "responses": {}
@@ -154,12 +180,16 @@
                         "name": "id",
                         "in": "path",
                         "required": true,
-                        "type": "string"
+                        "schema": {
+                            "type": "string"
+                        }
                     },
                     {
                         "name": "authorization",
                         "in": "header",
-                        "type": "string"
+                        "schema": {
+                            "type": "string"
+                        }
                     }
                 ],
                 "responses": {}
@@ -171,12 +201,16 @@
                         "name": "id",
                         "in": "path",
                         "required": true,
-                        "type": "string"
+                        "schema": {
+                            "type": "string"
+                        }
                     },
                     {
                         "name": "authorization",
                         "in": "header",
-                        "type": "string"
+                        "schema": {
+                            "type": "string"
+                        }
                     }
                 ],
                 "responses": {}
@@ -197,12 +231,16 @@
                         "name": "uid",
                         "in": "path",
                         "required": true,
-                        "type": "string"
+                        "schema": {
+                            "type": "string"
+                        }
                     },
                     {
                         "name": "authorization",
                         "in": "header",
-                        "type": "string"
+                        "schema": {
+                            "type": "string"
+                        }
                     }
                 ],
                 "responses": {}
@@ -215,7 +253,9 @@
                     {
                         "name": "authorization",
                         "in": "header",
-                        "type": "string"
+                        "schema": {
+                            "type": "string"
+                        }
                     }
                 ],
                 "responses": {}
@@ -229,12 +269,16 @@
                         "name": "id",
                         "in": "path",
                         "required": true,
-                        "type": "string"
+                        "schema": {
+                            "type": "string"
+                        }
                     },
                     {
                         "name": "authorization",
                         "in": "header",
-                        "type": "string"
+                        "schema": {
+                            "type": "string"
+                        }
                     }
                 ],
                 "responses": {}
@@ -247,7 +291,9 @@
                     {
                         "name": "authorization",
                         "in": "header",
-                        "type": "string"
+                        "schema": {
+                            "type": "string"
+                        }
                     }
                 ],
                 "responses": {}
@@ -258,7 +304,9 @@
                     {
                         "name": "authorization",
                         "in": "header",
-                        "type": "string"
+                        "schema": {
+                            "type": "string"
+                        }
                     }
                 ],
                 "responses": {}
@@ -269,7 +317,9 @@
                     {
                         "name": "authorization",
                         "in": "header",
-                        "type": "string"
+                        "schema": {
+                            "type": "string"
+                        }
                     }
                 ],
                 "responses": {}
@@ -282,7 +332,9 @@
                     {
                         "name": "authorization",
                         "in": "header",
-                        "type": "string"
+                        "schema": {
+                            "type": "string"
+                        }
                     }
                 ],
                 "responses": {}
@@ -295,7 +347,9 @@
                     {
                         "name": "authorization",
                         "in": "header",
-                        "type": "string"
+                        "schema": {
+                            "type": "string"
+                        }
                     }
                 ],
                 "responses": {}
@@ -309,12 +363,16 @@
                         "name": "id",
                         "in": "path",
                         "required": true,
-                        "type": "string"
+                        "schema": {
+                            "type": "string"
+                        }
                     },
                     {
                         "name": "authorization",
                         "in": "header",
-                        "type": "string"
+                        "schema": {
+                            "type": "string"
+                        }
                     }
                 ],
                 "responses": {}
@@ -327,7 +385,9 @@
                     {
                         "name": "authorization",
                         "in": "header",
-                        "type": "string"
+                        "schema": {
+                            "type": "string"
+                        }
                     }
                 ],
                 "responses": {}
